--- a/Git/index.html
+++ b/Git/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is first change~</p>
+    <p>This is first change</p>
+    <p>This is second change</p>
+    <p>This is  change</p>
+
 </body>
 </html>
