--- a/Git/index.html
+++ b/Git/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>This is first change</p>
     <p>This is second change</p>
-    <p>This is  change</p>
+    <p>This is third change</p>
 
 </body>
 </html>
