--- a/Git/index.html
+++ b/Git/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, init">
     <title>Document</title>
 </head>
 <body>
@@ -11,5 +11,6 @@
     <p>This is third change</p>
     <p>This is fourth change</p>
     <p>This is fifth change</p>
+    <p>This is sizth change with bug</p>
 </body>
 </html>
